@@ -1,3 +1,8 @@
+2011-10-25	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* psxreaddir/test.c: Remove bogus casts.
+	Fix fprintf format strings.
+
 2011-10-22	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* psxfile01/test.c: Remove local redeclaration of IMFS_dump. 
